added DD_APM_ENABLED=true to enable APM tracing

--- a/dd-agent.deployment.yml
+++ b/dd-agent.deployment.yml
@@ -19,6 +19,8 @@ spec:
             name: dogstatsdport
             protocol: UDP
         env:
+          - name: DD_APM_ENABLED
+            value: true
           - name: API_KEY
             valueFrom:
               secretKeyRef:
